--- a/Todo
+++ b/Todo
@@ -16,9 +16,9 @@ Change Passwd-
 music
 policy
 
-Create
-Update
-Delete
+Create-
+Update-
+Delete-
 Get own music with pagination, sort, search
 Get all music with pagination, sort, search
 Get Liked music with pagination, sort, search
@@ -28,9 +28,9 @@ remove like
 playlist
 
 
-Create
-Update
-Delete
+Create-
+Update-
+Delete-
 Get own playlist with pagination, sort, search
 Get all playlist with pagination, sort, search
 Get Liked playlist with pagination, sort, search
